2013-02-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-02-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln: 

2013-02-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.sln: 

2013-02-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Titania.userprefs: 

2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>

	* rules:
	* compat:
	* control:
	* copyright:
	* changelog:
	* Titania.userprefs:
	* format:
	* titania.debhelper.log:
	* titania.postrm.debhelper:
	* titania.postinst.debhelper: 
