@@ -20,7 +20,7 @@
       <File FileName="Titania/share/titania/pages/Library/Logo.wrl" Line="27" Column="1" />
       <File FileName="libtitania-x3d/Titania/X3D/Components/Time/TimeSensor.cpp" Line="154" Column="1" />
       <File FileName="Titania/Titania/main.cpp" Line="71" Column="1" />
-      <File FileName="libtitania-x3d/Titania/X3D/Basic/X3DArrayField.h" Line="1" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Basic/X3DArrayField.h" Line="8" Column="18" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
