@@ -96,6 +96,9 @@ public:
 	const Matrix4f &
 	getInverseTransformationMatrix () const { return inverseTransformationMatrix; }
 
+	const Matrix4f &
+	getModelViewMatrix () const { return modelViewMatrix; }
+
 	virtual
 	void
 	addToLayer (X3DLayerNode* const);
@@ -137,9 +140,6 @@ protected:
 
 	void
 	setModelViewMatrix (const Matrix4f & value) { modelViewMatrix = value; }
-
-	const Matrix4f &
-	getModelViewMatrix () const { return modelViewMatrix; }
 
 	void
 	setDifferenceMatrix (const Matrix4f & value) { differenceMatrix = value; }
