@@ -1,3 +1,8 @@
+2013-02-24  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DRenderer.cpp:
+	* X3DViewpointNode.h: 
+
 2013-02-19  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* TimeSensor.cpp:
